--- a/app/game/game.html
+++ b/app/game/game.html
@@ -64,6 +64,7 @@
 				{{p1.matches.length > p2.matches.length ? p1.name : p2.name}} WON!
 			</span>
 		</h1>
+		</h1>
 	</div>
 </nav>
 
@@ -75,7 +76,7 @@
 			</div>
 			
 			<div ng-repeat="match in p2.matches">
-				{{match[0].display}}/{{match[0].suit}}, {{match[1].display}}/{{match[1].display}}
+				{{match[0].display}}/{{match[0].suit}}, {{match[1].display}}/{{match[1].suit}}
 			</div>
 		</div>
 		
@@ -89,7 +90,9 @@
 					<!--a ng-show="row.show"-->
 						<div class="imageWrapper">
 							<img ng-show="row.show"  src="playing-card-front.png" />
-							<span ng-show="row.show" class="overlayImage">{{row.matched ? '' : row.display}}</span>
+							<span ng-show="row.show" class="overlayImage">
+								<h2><strong>{{row.matched ? '' : row.display}}</strong></h2>
+							</span>
 						</div>
 						
 					<!--/a-->
@@ -99,13 +102,14 @@
 		</table>
 		</div>
 		
+		
 		<div class="col-sm-2 sidenav">
 			<div class="well">
 				{{p1.name}}r Matches ({{p1.matches.length}})
 			</div>
 			
 			<div ng-repeat="match in p1.matches">
-				{{match[0].display}}/{{match[0].suit}}, {{match[1].display}}/{{match[1].display}}
+				{{match[0].display}}/{{match[0].suit}}, {{match[1].display}}/{{match[1].suit}}
 			</div>
 		</div>
 	</div>
