--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,8 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#!/game">play</a></li>
-    <li><a href="#!/view2">view2</a></li>
+    <li><a ng-href="/game">play</a></li>
+    <li><a ng-href="/view2">view2</a></li>
   </ul>
 
   <!--[if lt IE 7]>
