--- a/app/home/home.html
+++ b/app/home/home.html
@@ -28,7 +28,7 @@
 			
 			<div>
 				<span>
-					Game Type: <input type="radio" value="Single" ng-model="game.type">Single Player</input> 					<input type="radio" value="Multi" ng-model="game.type">Multiplayer</input>
+					Game Type: <input type="radio" value="Single" ng-model="game.type"><span ng-click="game.type = 'Single' ">Single Player</span></input> <input type="radio" value="Multi" ng-model="game.type"><span ng-click="game.type = 'Multi'">Multiplayer</span></input>
 				</span>
 			</div>
 			
