--- a/app/game/game.html
+++ b/app/game/game.html
@@ -5,6 +5,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	 <style>
+	 
+	 html, body, {
+		position:fixed;
+		top:0;
+		bottom:0;
+		left:0;
+		right:0;
+	 }
     /* Remove the navbar's default margin-bottom and rounded borders */ 
     .navbar {
       margin-bottom: 0;
@@ -15,7 +23,6 @@
     
     .sidenav {
       padding-top: 20px;
-      background-color: #f1f1f1;
       height: 100%;
     }
 	
